[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Art/Mapgame.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UIScenes/Setting.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/kfn_40_o1.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/UI/Buttons/button_rectangle_depth_flat.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/button_rectangle_depth_gradient.png" type="Texture" id=5]

[node name="Setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Mapgame" type="Sprite" parent="."]
position = Vector2( 296, 288 )
scale = Vector2( 0.151752, 0.221572 )
texture = ExtResource( 1 )

[node name="Mapgame2" type="Sprite" parent="."]
position = Vector2( 651, 289 )
scale = Vector2( 0.151752, 0.221572 )
texture = ExtResource( 1 )

[node name="Mapgame3" type="Sprite" parent="."]
position = Vector2( 995, 287 )
scale = Vector2( 0.151752, 0.221572 )
texture = ExtResource( 1 )

[node name="Level1_button" type="TextureButton" parent="."]
margin_left = 199.0
margin_top = 429.0
margin_right = 390.0
margin_bottom = 480.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="Level1_button"]
margin_left = 16.0
margin_top = 6.0
margin_right = 205.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "Level1"

[node name="Level2_button" type="TextureButton" parent="."]
margin_left = 555.0
margin_top = 427.0
margin_right = 746.0
margin_bottom = 488.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="Level2_button"]
margin_left = 17.0
margin_top = 7.0
margin_right = 206.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 3 )
text = "Level2"

[node name="Level3_button" type="TextureButton" parent="."]
margin_left = 900.0
margin_top = 429.0
margin_right = 1092.0
margin_bottom = 493.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="Level3_button"]
margin_left = 15.0
margin_top = 8.0
margin_right = 183.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 3 )
text = "Level3"

[node name="return_button" type="TextureButton" parent="."]
margin_left = 509.0
margin_top = 564.0
margin_right = 795.0
margin_bottom = 628.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="return_button"]
margin_left = 33.0
margin_top = 8.0
margin_right = 262.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"

[connection signal="pressed" from="Level1_button" to="." method="_on_Level1_button_pressed"]
[connection signal="pressed" from="Level2_button" to="." method="_on_Level2_button_pressed"]
[connection signal="pressed" from="Level3_button" to="." method="_on_Level3_button_pressed"]
[connection signal="pressed" from="return_button" to="." method="_on_return_button_pressed"]
